# polls

./: .gitignore  README.md  before_commit.sh  conftest.py  main.py  manage.py  pyproject.toml  setup.cfg
.github/actions/code-style/: action.yml
.github/actions/django/: action.yml
.github/actions/environment/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: ci.yml
common/: annotations.py  domain.py  entity.py  exceptions.py  handler.py  injection.py  interface.py  patterns.py  repository.py  validator.py
common/domains/: entity.py
common/infrastructure/: configuration.py  server.py
documentations/: how-to-use.md  installation.md
sources/: pyproject.py
sources/application/handlers/: __init__.py  access_handler.py  poll_handler.py
sources/application/protocols/access/: __init__.py  (+1 more)
sources/domain/entities/: answer.py  poll.py
sources/infrastructure/: __init__.py  error_handlers.py  exceptions.py  handlers.py  server.py  setup.py
sources/infrastructure/api/: __init__.py  component.py  controllers.py  error_handlers.py  serializers.py  validation.py
sources/infrastructure/blacksheep/: application.py
sources/infrastructure/command/: __init__.py  apps.py  manager.py
sources/infrastructure/configurations/: __init__.py  base.py  dev.py  prod.py
sources/infrastructure/django/: __init__.py  asgi.py  component.py  settings.py
sources/infrastructure/error/: handlers.py
sources/infrastructure/orm/: __init__.py  apps.py  models.py
sources/infrastructure/utils/: jwt.py
sources/infrastructure/uvicorn/: __init__.py  server.py
(+31 files in other folders)
