[tool.poetry]
name = "polls"
version = "0.1.0"
authors = ["remimd"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
blacksheep = "^1.2.8"
django = "^4.1.3"
django-extensions = "^3.2.1"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
